Readme angepasst, footer ergänzt

--- a/webapp/assets/css/main.css
+++ b/webapp/assets/css/main.css
@@ -332,3 +332,10 @@ button:focus-visible {
         display: none;
     }
 }
+
+.footer {
+    text-align: right;
+    font-size: 0.8rem;
+    color: #666;
+    margin-top: 2rem;
+}
