--- a/webapp/assets/css/admin.css
+++ b/webapp/assets/css/admin.css
@@ -1026,7 +1026,12 @@ tr:nth-child(even):hover {
 .form-group {
     margin-bottom: 1.5rem;
 }
-
+label.checkbox_lable{
+    display: flex;
+    font-weight: 300;
+    color: #495057;
+    font-size: 0.5rem;
+}
 label {
     display: block;
     margin-bottom: 0.5rem;
@@ -1034,6 +1039,8 @@ label {
     color: #495057;
     font-size: 0.95rem;
 }
+
+
 
 textarea {
     width: 100%;
